# ordered-dirs

./: README.md  ordered-dirs.cabal  stack.yaml
app/: DirBackingHandles.hs  Main.hs
