name:                ordered-dirs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/greenrd/ordered-dirs#readme
license:             BSD3
license-file:        LICENSE
author:              Robin Green
maintainer:          greenrd@greenrd.org
copyright:           Robin Green
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ordered-dirs-exe
  hs-source-dirs:      app
  other-modules:       DirBackingHandles
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers >= 0.5.6.2 && < 0.6
                     , directory >= 1.2.2.0 && < 1.3
                     , filepath >= 1.4.0.0 && < 1.5
                     , HFuse >= 0.2.4.5 && < 0.3
                     , machines >= 0.6.1 && < 0.7
                     , machines-io >= 0.2.0.13 && < 0.3
                     , ordered-dirs
                     , time >= 1.5.0.1 && < 1.6
                     , transformers >= 0.4.2.0 && < 0.5
  default-language:    Haskell2010

test-suite ordered-dirs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ordered-dirs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/greenrd/ordered-dirs
